# dedica-mod

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: main.rs
