[package]
name = "dedica-mod"
version = "0.9.0"
edition = "2021"
authors = ["Patrick Mueller"]
description = "Measure the temperature and pressure of the DeLonghi Dedica and provide an interface to the outside"
readme = "README.md"
repository = "https://github.com/pat-dev-rick/dedica-mod"


[dependencies]
clap = { version = "4.0.30", default-features = true, features = ["derive"] }
clap-verbosity-flag = "2.0.0"